--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 <div class="static">
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-1.png"id="coffeeimg">
+    <img src="./Images/menu-1.png"id="coffeeimg">
    <p id="tasty"> Tasty And Healthy
    <br><br>
    $15.99   <del>$20.99</del><br><br>
@@ -53,7 +53,7 @@
    </p>
   </div>
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-2.png"id="coffeeimg">
+    <img src="./Images/menu-2.png"id="coffeeimg">
     <p id="tasty"> Tasty And Healthy
       <br><br>
       $15.99   <del>$20.99</del><br><br>
@@ -61,7 +61,7 @@
       </p>
   </div>
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-3.png"id="coffeeimg">
+    <img src="./Images/menu-3.png"id="coffeeimg">
     <p id="tasty"> Tasty And Healthy
       <br><br>
       $15.99   <del>$20.99</del><br><br>
@@ -69,7 +69,7 @@
       </p>
   </div>
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-4.png"id="coffeeimg">
+    <img src="./Images/menu-4.png"id="coffeeimg">
     <p id="tasty"> Tasty And Healthy
       <br><br>
       $15.99   <del>$20.99</del><br><br>
@@ -79,7 +79,7 @@
 </div> 
 <div class="static">
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-5.png"id="coffeeimg">
+    <img src="./Images/menu-5.png"id="coffeeimg">
    <p id="tasty"> Tasty And Healthy
    <br><br>
    $15.99   <del>$20.99</del><br><br>
@@ -87,7 +87,7 @@
    </p>
   </div>
   <div class="photos">
-    <img src="C:\Users\Priyal Sengar\Downloads\menu-6.png"id="coffeeimg">
+    <img src="./Images/menu-6.png"id="coffeeimg">
     <p id="tasty"> Tasty And Healthy
       <br><br>
       $15.99   <del>$20.99</del><br><br>
@@ -126,7 +126,7 @@
         <div class="ibox">
             <i4 class="fa-regular fa-eye"></i4>
         </div>
-     <img src="C:\Users\Priyal Sengar\Downloads\product-1 (1).png" height="150px" width="100px" id="stickimg">
+     <img src="./Images/product-1 (1).png" height="150px" width="100px" id="stickimg">
      <p id="fresh"> Fresh Coffee
         <br><br>
         <i3 class="fa-solid fa-star"></i3>
@@ -148,7 +148,7 @@
     <div class="ibox">
         <i4 class="fa-regular fa-eye"></i4>
     </div>
-        <img src="C:\Users\Priyal Sengar\Downloads\product-2.png" height="150px" width="100px" id="stickimg">
+        <img src="./Images/product-2.png" height="150px" width="100px" id="stickimg">
     <p id="fresh"> Fresh Coffee
         <br><br>
         <i3 class="fa-solid fa-star"></i3>
@@ -170,7 +170,7 @@
         <div class="ibox">
             <i4 class="fa-regular fa-eye"></i4>
         </div>
-    <img src="C:\Users\Priyal Sengar\Downloads\product-3.png"  height="150px" width="100px" id="stickimg">
+    <img src="./Images/product-3.png"  height="150px" width="100px" id="stickimg">
     <p id="fresh"> Fresh Coffee
         <br><br>
         <i3 class="fa-solid fa-star"></i3>
@@ -190,9 +190,9 @@
 <div class="packet">
     <div class="sticker">
     <br><br>
-    <img src="C:\Users\Priyal Sengar\Downloads\quote-img.png" id="coffeeimg">
+    <img src="./Images/quote-img.png" id="coffeeimg">
     <p id="intext">&nbsp&nbsp&nbspLorem ipsum dolor, sit amet consectetur &nbsp&nbsp&nbsp&nbsp&nbspadipisicing elit. Ipsam, fugit enim. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbspSunt cupiditate corrupti itaque eos ab.</p>
-    <img src="C:\Users\Priyal Sengar\Downloads\pic-1 (1).png" id="pic">
+    <img src="./Images/pic-1 (1).png" id="pic">
     <p id="fresh">John Deo
       <br><br>
     <i3 class="fa-solid fa-star"></i3>
@@ -204,9 +204,9 @@
   </div>
     <div class="sticker">
     <br><br>
-    <img src="C:\Users\Priyal Sengar\Downloads\quote-img.png" id="coffeeimg">
+    <img src="./Images/quote-img.png" id="coffeeimg">
     <p id="intext">&nbspLorem ipsum dolor, sit amet consectetur &nbsp&nbsp&nbsp&nbsp&nbspadipisicing elit. Ipsam, fugit enim.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbspSunt cupiditate corrupti itaque eos ab.</p>
-   <img src="C:\Users\Priyal Sengar\Downloads\pic-2.png" id="pic">
+   <img src="./Images/pic-2.png" id="pic">
    <p id="fresh">John Deo
     <br><br>
     <i3 class="fa-solid fa-star"></i3>
@@ -218,9 +218,9 @@
   </div>
     <div class="sticker">
     <br><br>
-   <img src="C:\Users\Priyal Sengar\Downloads\quote-img.png" id="coffeeimg">  
+   <img src="./Images/quote-img.png" id="coffeeimg">  
    <p id="intext">&nbspLorem ipsum dolor, sit amet consectetur &nbsp&nbsp&nbsp&nbsp&nbsp adipisicing elit. Ipsam, fugit enim.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp Sunt cupiditate corrupti itaque eos ab.</p>
-   <img src="C:\Users\Priyal Sengar\Downloads\pic-3.png" id="pic">
+   <img src="./Images/pic-3.png" id="pic">
    <p id="fresh">John Deo
     <br><br>
    <i3 class="fa-solid fa-star"></i3>
@@ -241,7 +241,7 @@
   </div>
   <div class="packetin">
     <div class="stickerin">
-      <img src="C:\Users\Priyal Sengar\Downloads\blog-1.jpeg"  width="280px" >
+      <img src="./Images/blog-1.jpeg"  width="280px" >
       <p id="freshin">Tasty And Refreshing Coffee</p>
       <p id="day">By Admin /21st May,2021</p>
       <p id="intext">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -249,7 +249,7 @@
         <button type="click" id="button">Read More</button> </p>
     </div>
       <div class="stickerin">
-        <img src="C:\Users\Priyal Sengar\Downloads\blog-2.jpeg" width="280px">
+        <img src="./Images/blog-2.jpeg" width="280px">
         <p id="freshin">Tasty And Refreshing Coffee</p>
         <p id="day">By Admin /21st May,2021</p>
         <p id="intext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -257,7 +257,7 @@
         <button type="click" id="button">Read More</button> </p>
       </div>
       <div class="stickerin">
-        <img src="C:\Users\Priyal Sengar\Downloads\blog-3.jpeg" width="280px">
+        <img src="./Images/blog-3.jpeg" width="280px">
         <p id="freshin">Tasty And Refreshing Coffee</p>
         <p id="day">By Admin /21st May,2021</p>
         <p id="intext">Lorem ipsum dolor sit amet consectetur adipisicing elit.
